--- a/index.html
+++ b/index.html
@@ -2,36 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Star Wars</title>
+	<title>Starwars</title>
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<div class="container">
-	<div id="logo"></div>
-	<nav>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">The Force</a></li>
-			<li><a href="#">The Empire</a></li>
-			<li><a href="#">The Rebels</a></li>
-			<li><a href="#">Yoda knows</a></li>
-		</ul>
-		
-	</nav>
-</div>
-<header>
-<div class="container">	
-	<h1>Star Wars</h1>
-</div>	
-</header>
-<div class="container">
-	
-</div>
-
-
-
-
-
-	
+	<div class="container">
+		<div id="logo"></div>
+		<nav>
+			<ul>
+				<li><a href="#">The Force</a></li>
+				<li><a href="#">The Empire</a></li>
+				<li><a href="#">The Rebels</a></li>
+				<li><a href="#">Deathstar</a></li>
+			</ul>
+		</nav>
+	</div>
+	<header>
+		<div class="container">
+			<h1>Star Wars to action</h1>
+		</div>
+	</header>
 </body>
 </html>
