update overflow #content + footer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 			</blockquote>
 		</section>
+		<footer>
+			copyright info + social
+		</footer>
 	</div>
 </body>
 </html>
